<resources>
    <string name="app_name">Dryft</string>
    <string name="action_settings">Settings</string>
    <string name="server_api_key">AIzaSyDU-yQUH2fC7Q7KEROEys-oDiCKRBRYuLA</string>
    <string name="android_api_key">AIzaSyDNaMHj_XpC5z5MfeKp5SeFoeKa2nbEl1E</string>

    <!--Content Descriptors-->
    <string name="london">London</string>
    <string name="toronto">Toronto</string>
    <string name="new_york">New York</string>
    <string name="san_fran">San Francisco</string>
    <string name="msg_image">A picture from %1$s</string>
    <string name="msg_image2">A picture taken at %1$s</string>
    <string name="msg_add_to_tour">Add to tour button</string>


    <!--General Items-->
    <string name="tour">TOUR</string>
    <string name="map">MAP</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission">Allow access to location</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="got_it">Got It</string>
    <string name="about_title">About Dryft</string>
    <string name="about_text">Dryft is a mobile app for avid travellers, inspired by the idea
            that managing your time in a new city should be simple and enjoyable.
            Destinations selected are curated from fellow travellers who are passionate about history,
            culture, art, and most importantly, food!
            \n\n

            Got an idea for the app?\n
            Email hello@alelievangelista.com
    </string>

    <!--Menu Items-->
    <string name="about">About</string>
    <string name="my_tour">My Tour</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="go_to_website">Go to website</string>
    <string name="go_to_tips">See more tips</string>
    <string name="menu">See Menu</string>

    <string name="hours">Hours</string>
    <string name="price">Price</string>
    <string name="tips">Tips</string>

    <string name="twitter">Twitter</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>


    <!--Widget Items-->
    <string name="widget_empty_text">No Tour Available</string>

    <!--Messages-->
    <string name="add_to_tour">Adding %1$s to your tour</string>
    <string name="new_tour">Sit tight. We\'re preparing a new tour...</string>
    <string name="change_tour">Hold on. We\'ve detected a change in your trip...</string>

    <!--Foursquare API-->
    <string name="foursquare_url_base">https://api.foursquare.com/v2/venues/</string>
    <string name="foursquare_search">search?</string>
    <string name="foursquare_explore">explore?</string>
    <string name="foursquare_version">&amp;v=20130815</string>
    <string name="foursquare_results_limit">&amp;limit=1</string>
    <string name="foursquare_offset">&amp;offset=</string>
    <string name="foursquare_lat_lng">&amp;ll=</string>
    <string name="foursquare_breakfast">&amp;query=breakfast</string>
    <string name="foursquare_lunch">&amp;query=lunch</string>
    <string name="foursquare_dinner">&amp;query=dinner</string>
    <string name="foursquare_radius_2000">&amp;radius=5000</string>
    <string name="foursquare_venue_photos">&amp;venuePhotos=1</string>

    <string name="foursquare_client_id">client_id=</string>
    <string name="foursquare_client_secret">&amp;client_secret=</string>

    <string name="foursquare_id">F40XDLFHBJKMLOXKX2PMBRG53FQG3Z2OMEMJDVBXDYOCEVG2</string>
    <string name="foursquare_secret">RZ5Y24G2U5CJ3A4E5AOGTXELRX10MYZLLGT13HTO4H1YSBNY</string>

    <string name="nyc_attractions">&amp;near=new+york+city+new+york&amp;query=tourist</string>
    <string name="toronto_attractions">&amp;near=toronto&amp;query=tourist</string>
    <string name="sf_attractions">&amp;near=san+francisco&amp;query=tourist</string>
    <string name="london_attractions">&amp;near=london+england&amp;query=tourist</string>

    <!-- test.xml vals -->
    <string name="restaurant_url_base">https://api.foursquare.com/v2/venues/explore?client_id=F40XDLFHBJKMLOXKX2PMBRG53FQG3Z2OMEMJDVBXDYOCEVG2&amp;client_secret=RZ5Y24G2U5CJ3A4E5AOGTXELRX10MYZLLGT13HTO4H1YSBNY&amp;v=20130815&amp;limit=1</string>
    <string name="test_vals">&amp;v=20130815&amp;ll=43.6401961,-79.4222285&amp;query=breakfast&amp;radius=6000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_pref">PrefActivity</string>


</resources>
