<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/frag_place_detail"
    android:clickable="true"
    tools:context="com.alelievangelista.dryft.ui.PlaceDetailFragment"
    android:weightSum="1"
    android:background="#ffffffff">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary">

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/place_detail_image"
                        android:src="@drawable/nyc_01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="20dp"
                        android:layout_alignParentEnd="false"
                        android:gravity="bottom"
                        android:layout_marginBottom="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Jack's Wife Freda"
                            android:id="@+id/place_detail_name"
                            style="@style/PlaceDetailTitleStyle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Restaurant, Breakfast Spot"
                            android:id="@+id/place_detail_category"
                            android:textAllCaps="true"
                            style="@style/PlaceDetailCategoryStyle" />

                    </LinearLayout>

                </RelativeLayout>

                <include layout="@layout/toolbar"/>


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-32dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/airplane_white"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|right|end" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:clickable="true"
                    tools:context="com.alelievangelista.dryft.ui.PlaceDetailFragment"
                    android:weightSum="1"
                    android:background="#ffffffff">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Simple spot serving American fare with Middle Eastern influences plus classic cocktails."
                        android:id="@+id/place_detail_description"
                        style="@style/PlaceDetailSubtitleStyle"
                        android:layout_gravity="center" />

                </LinearLayout>

                    <View style="@style/ListDivider"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:gravity="center">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/address_label"
                                style="@style/PlaceDetailBoldStyle"
                                android:textAllCaps="true"
                                android:singleLine="false"
                                android:text="Address" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/place_detail_address1"
                                    style="@style/PlaceDetailSubtitleStyle"
                                    android:singleLine="false"
                                    android:text="50 Carmine Street"
                                    android:layout_weight="1"
                                    android:layout_marginLeft="40dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/phone_label"
                                style="@style/PlaceDetailBoldStyle"
                                android:textAllCaps="true"
                                android:singleLine="false"
                                android:text="Phone" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/place_detail_phone"
                            style="@style/PlaceDetailSubtitleStyle"
                            android:singleLine="false"
                            android:text="555-678-0934"
                            android:layout_marginLeft="40dp" />

                            </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/twitter_label"
                                style="@style/PlaceDetailBoldStyle"
                                android:textAllCaps="true"
                                android:singleLine="false"
                                android:text="Twitter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/place_detail_twitter"
                            style="@style/PlaceDetailSubtitleStyle"
                            android:singleLine="false"
                            android:text="tweet"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="40dp" />

                            </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/place_detail_website_link"
                            style="@style/PlaceDetailLinkStyle"
                            android:textAllCaps="true"
                            android:singleLine="false"
                            android:text="@string/go_to_website" />


                    </LinearLayout>

                    <View style="@style/ListDivider"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="20dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/place_detail_hours"
                                style="@style/PlaceDetailBoldStyle"
                                android:textAllCaps="true"
                                android:singleLine="false"
                                android:text="@string/hours" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:id="@+id/place_day"
                                    style="@style/PlaceDetailSubtitle2Style"
                                    android:singleLine="false"
                                    android:text="Mon-Thurs" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/place_hours"
                                    style="@style/PlaceDetailSubtitle2Style"
                                    android:singleLine="false"
                                    android:text="10:00am - 11:00pm"
                                    android:layout_marginLeft="10dp" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginRight="25dp"
                            android:layout_marginLeft="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/price_label"
                                style="@style/PlaceDetailBoldStyle"
                                android:textAllCaps="true"
                                android:singleLine="false"
                                android:text="@string/price" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:id="@+id/dollar1"
                                    android:src="@drawable/dollar" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:id="@+id/dollar2"
                                    android:layout_marginLeft="2dp"
                                    android:src="@drawable/dollar" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:id="@+id/dollar3"
                                    android:layout_marginLeft="2dp"
                                    android:src="@drawable/dollar" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:id="@+id/dollar4"
                                    android:layout_marginLeft="2dp"
                                    android:src="@drawable/dollar" />

                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:id="@+id/imageView4"
                                    android:src="@drawable/hamburger" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/place_detail_menu"
                                    style="@style/PlaceDetailLinkStyle"
                                    android:singleLine="false"
                                    android:text="@string/menu"
                                    android:textAllCaps="true"
                                    android:layout_marginLeft="6dp" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/place_map"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        class="com.google.android.gms.maps.SupportMapFragment" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/place_tips"
                            style="@style/PlaceDetailBoldStyle"
                            android:singleLine="false"
                            android:text="@string/tips"
                            android:textAllCaps="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>